jira_clone/force-app/main/default/objects/Status__c/Status__c.object-meta.xml
<CustomObject>
    <description>Workflow status for tickets</description>
    <label>Status</label>
    <nameField>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>