jira_clone/force-app/main/default/objects/Status__c/fields/isEnd__c.field-meta.xml
<CustomField>
    <fullName>isEnd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this status as the ending status</description>
    <label>Is End</label>
    <type>Checkbox</type>
</CustomField>