jira_clone/force-app/main/default/objects/Status__c/fields/isStart__c.field-meta.xml
<CustomField>
    <fullName>isStart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this status as the starting status</description>
    <label>Is Start</label>
    <type>Checkbox</type>
</CustomField>